--- a/Sage/CMakeLists.txt
+++ b/Sage/CMakeLists.txt
@@ -2,9 +2,7 @@ cmake_minimum_required(VERSION 3.14)
 
 project(Sage VERSION 0.1.0 LANGUAGES CXX)
 
-if(NOT CMAKE_BUILD_TYPE)
-    set(CMAKE_BUILD_TYPE "Debug")
-endif()
+include_directories(vendor/spdlog/include)
 
 add_library(Sage SHARED src/Sage.hpp)
 
