Complete CMakeLists to create working build and organize directories.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,13 +2,14 @@ cmake_minimum_required(VERSION 3.14)
 project(SageEngine VERSION 0.1.0 LANGUAGES CXX)
 
 #build type
-if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
+if(NOT CMAKE_BUILD_TYPE)
     message(
-        STATUS "Build type set to 'RelWithDebInfo' since none was specified."
+        STATUS "Build type set to 'Debug' since none was specified."
     )
-    set(CMAKE_BUILD_TYPE RelWithDebInfo CACHE STRING "Choose build type" FORCE)
-    set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS "Debug" "Release" "MinSizeRel" "RelWithDebInfo")
+    set(CMAKE_BUILD_TYPE Debug)
 endif()
 
 add_subdirectory(Sage)
 add_subdirectory(SandboxApp)
+
+set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT SandboxApp)
