--- a/Sage/CMakeLists.txt
+++ b/Sage/CMakeLists.txt
@@ -1,10 +1,11 @@
-cmake_minimum_required(VERSION 3.14)
+cmake_minimum_required(VERSION 3.16)
 
 project(Sage VERSION 0.1.0 LANGUAGES CXX)
 
 add_library(
     Sage SHARED 
-    ${CMAKE_CURRENT_LIST_DIR}/include/Sage.hpp 
+    ${CMAKE_CURRENT_LIST_DIR}/include/Sage.hpp
+    ${CMAKE_CURRENT_LIST_DIR}/include/Sagepch.hpp
     ${CMAKE_CURRENT_LIST_DIR}/include/Sage/Application.hpp
     ${CMAKE_CURRENT_LIST_DIR}/src/SageCore/Application.cpp 
     ${CMAKE_CURRENT_LIST_DIR}/include/Sage/Core.hpp
@@ -21,6 +22,7 @@ target_include_directories(Sage
     PUBLIC include
     PUBLIC include/Sage
 )
+target_precompile_headers(Sage PRIVATE include/Sagepch.hpp)
 
 set_target_properties(Sage PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin/${CMAKE_BUILD_TYPE}-${CMAKE_SYSTEM_NAME}/${PROJECT_NAME})
 get_target_property(SAGE_BIN Sage RUNTIME_OUTPUT_DIRECTORY)
