--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Sage/vendor/spdlog"]
 	path = Sage/vendor/spdlog
 	url = https://github.com/gabime/spdlog.git
+[submodule "Sage/vendor/GLFW"]
+	path = Sage/vendor/GLFW
+	url = https://github.com/glfw/glfw
