--- a/Sage/CMakeLists.txt
+++ b/Sage/CMakeLists.txt
@@ -12,6 +12,9 @@ add_library(
     ${CMAKE_CURRENT_LIST_DIR}/include/Sage/EntryPoint.hpp
     ${CMAKE_CURRENT_LIST_DIR}/include/Sage/Log.hpp
     ${CMAKE_CURRENT_LIST_DIR}/src/SageCore/Log.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/include/Sage/Window.hpp
+    ${CMAKE_CURRENT_LIST_DIR}/include/Sage/Platform/Windows/WindowsWindow.hpp
+    ${CMAKE_CURRENT_LIST_DIR}/include/Sage/Platform/Windows/WindowsWindow.cpp
 )
 
 target_compile_definitions(Sage PRIVATE SAGE_BUILD_DLL SAGE_PLATFORM_WINDOWS)
@@ -22,10 +25,12 @@ target_include_directories(Sage
     PUBLIC vendor/GLFW/include
     PUBLIC include
     PUBLIC include/Sage
+    PUBLIC include/Sage/Events 
+    PUBLIC include/Sage/Platform/Windows
 )
 target_precompile_headers(Sage PRIVATE include/Sagepch.hpp)
 
-target_link_libraries(Sage glfw)
+target_link_libraries(Sage glfw opengl32.lib)
 
 set_target_properties(Sage PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin/${CMAKE_BUILD_TYPE}-${CMAKE_SYSTEM_NAME}/${PROJECT_NAME})
 get_target_property(SAGE_BIN Sage RUNTIME_OUTPUT_DIRECTORY)
